<resources>
    <string name="app_name">login_reg_ice_task_st10134934</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm_password</string>
    <string name="register">register</string>
    <string name="already_have_an_account_login">already_have_an_account_login</string>
    <string name="login">login</string>
    <string name="don_t_have_an_account_sign_in">don_t_have_an_account_sign_in</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>
</resources>